--- a/ue_app/templates/registration/email_verification_confirm.html
+++ b/ue_app/templates/registration/email_verification_confirm.html
@@ -15,6 +15,9 @@
         <div class="sign-up-card">
             <h5>Please confirm your email address to complete the registration.</h5>
         </div>
+        <span>Continue create your profile by provide some personal info.</span>
+        <p><span>Note:</span> You can not create a channel without having a profile.</p>
+        <a class="create-profile-link" href="{% url 'ue_app:profile_create' %}"></a>
     </div>
 </div>
 
