--- a/ue_app/templates/registration/register.html
+++ b/ue_app/templates/registration/register.html
@@ -53,4 +53,18 @@
     </div>
 </div>
 
+<script>
+    let password1Input = document.querySelector("input[name='password1']");
+    let password2Input = document.querySelector("input[name='password2']");
+
+    setInterval(() => {
+        if (password2Input.value == password1Input.value) {
+            password2Input.style.color = 'green';
+        } else {
+            password2Input.style.color = 'red';
+        }
+    }, 500);
+
+</script>
+
 {% endblock content %}
